config/includes.chroot/etc/network/ip6tables
# Drop incoming connections
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LAN-INPUT - [0:0]

# Allow localhost traffic
-A INPUT -i lo -j ACCEPT

# Allow ICMP
-A INPUT -p icmpv6 -j ACCEPT

# Allow all established connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Allow SNMP from cacti servers
-A INPUT -s 2001:470:21:20::480d:5f2b -p udp --dport snmp -j ACCEPT
-A INPUT -s 2001:1938:269:0:5054:ff:feb0:8b1e -p udp --dport snmp -j ACCEPT

# Allow SSH
-A INPUT -p tcp --dport ssh -j ACCEPT

-A INPUT -i eth1 -j LAN-INPUT
-A INPUT -i wlan0 -j LAN-INPUT
-A INPUT -j REJECT --reject-with icmp6-adm-prohibited

-A LAN-INPUT -p udp --dport 5001 -j ACCEPT
-A LAN-INPUT -p tcp --dport 5001 -j ACCEPT
-A LAN-INPUT -p udp --dport domain -j ACCEPT
-A LAN-INPUT -p tcp --dport domain -j ACCEPT
-A LAN-INPUT -p udp --dport mdns -d ff02::fb -j ACCEPT

COMMIT
