config/includes.chroot/etc/network/iptables
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Enable NAT on WAN interface
-A POSTROUTING -o eth0 -j MASQUERADE

COMMIT

# Drop incoming connections
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LAN-INPUT - [0:0]

# Allow localhost traffic
-A INPUT -i lo -j ACCEPT

# Allow ICMP
-A INPUT -p icmp -j ACCEPT

# Allow established connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Allow SSH
-A INPUT -p tcp --dport ssh -j ACCEPT

-A INPUT -i eth1 -j LAN-INPUT
-A INPUT -j REJECT --reject-with icmp-host-prohibited

-A LAN-INPUT -p udp --dport 5001 -j ACCEPT
-A LAN-INPUT -p tcp --dport 5001 -j ACCEPT
-A LAN-INPUT -p udp --dport domain -j ACCEPT
-A LAN-INPUT -p tcp --dport domain -j ACCEPT
-A LAN-INPUT -p udp --dport bootps -j ACCEPT
-A LAN-INPUT -p udp --dport mdns -d 224.0.0.251 -j ACCEPT

COMMIT
